[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stegverse-discovery"
version = "1.0.0"
description = "Discovery and monitoring layer for StegVerse ecosystem components"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "StegVerse", email = "dev@stegverse.org"}
]
keywords = ["discovery", "monitoring", "stegverse", "stegdb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/StegVerse-org/discovery"
Repository = "https://github.com/StegVerse-org/discovery"
Issues = "https://github.com/StegVerse-org/discovery/issues"
